--- a/front/src/styles/noticeSection.css
+++ b/front/src/styles/noticeSection.css
@@ -67,10 +67,17 @@
 .notice-img {
     width: 70px;
     height: 70px;
-    background-color: #ddd;
     border-radius: 6px;
     margin-right: 18px;
+    overflow: hidden;
     flex-shrink: 0;
+}
+
+.notice-img img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    display: block;
 }
   
 .notice-text .tag {
